--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
     <div id="page">
       <div id="calc">
         <div id="calc_display">
-          <span id="calc_display_equation">0</span>
+          <span id="calc_display_equation">&nbsp;</span>
           <span id="calc_display_result">&nbsp;</span>
         </div>
         <div id="calc_divider"></div>
         <div id="calc_keyboard">
+          <button class="calc_keyboard_btn ">C</button>
+          <button class="calc_keyboard_btn">()</button>
+          <button class="calc_keyboard_btn btn_button">%</button>
+          <button class="calc_keyboard_btn btn_button">/</button>
+
           <button class="calc_keyboard_btn btn_number">7</button>
           <button class="calc_keyboard_btn btn_number">8</button>
           <button class="calc_keyboard_btn btn_number">9</button>
-          <button class="calc_keyboard_btn">x</button>
+          <button class="calc_keyboard_btn btn_button">*</button>
+          
           <button class="calc_keyboard_btn btn_number">4</button>
           <button class="calc_keyboard_btn btn_number">5</button>
           <button class="calc_keyboard_btn btn_number">6</button>
@@ -36,11 +42,11 @@
           <button class="calc_keyboard_btn btn_number">1</button>
           <button class="calc_keyboard_btn btn_number">2</button>
           <button class="calc_keyboard_btn btn_number">3</button>
-          <button class="calc_keyboard_btn">+</button>
+          <button class="calc_keyboard_btn btn_button">+</button>
           <button class="calc_keyboard_btn">+/-</button>
           <button class="calc_keyboard_btn btn_number">0</button>
           <button class="calc_keyboard_btn">.</button>
-          <button class="calc_keyboard_btn">=</button>
+          <button class="calc_keyboard_btn btn_Equal">=</button>
         </div>
       </div>
     </div>
